# RUST-API1

./: .gitignore  Cargo.toml  README.md  ecosystem.config.js  package-lock.json  package.json  tsconfig.json  vercel.json
api/: rust.rs
pages/: .index.tsx.swp  _document.tsx  index.tsx
pages/api/: nodejs.ts
