[package]
name = "nextjs_runtime_demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
vercel_runtime = "1.0"
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
serde = { version = "1.0.188", features = ["derive"] }
rand = "0.8"
oorandom = "11.1.3"

[[bin]]
name = "rust"
path = "api/rust.rs"
